fix: align text vertical position

--- a/kun-frontend/src/pages/data-development/components/TaskDefinitionTable/TaskDefinitionTable.module.less
+++ b/kun-frontend/src/pages/data-development/components/TaskDefinitionTable/TaskDefinitionTable.module.less
@@ -17,5 +17,7 @@
 }
 
 .SelectedItemsCountText {
+  position: relative;
   display: inline-block;
+  bottom: 1px;
 }
